--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rick and Morty</title>
+  <title>Fake Store</title>
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 </head>
 
